
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>fr.inria.atlanmod</groupId>
  <artifactId>atlanmod-instantiator</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>model-generator-spark Maven Plugin</name>

  <repositories>
  		<!-- NeoEMF Repository -->
		<!--repository>
			<id>NeoEMF</id>
			<name>NeoEMF update site</name>
			<url>https://atlanmod.github.io/NeoEMF/releases/latest/plugin/</url>			
		</repository-->
	</repositories>
  <!-- FIXME change it to the project's website -->
  <url>http://maven.apache.org</url>

      <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
        <argLine /> <!-- Keep it empty -->
        <argLine.global>-Xms256m -Xmx2g -XX:+UseConcMarkSweepGC</argLine.global>

        <commons-collections.version>4.1</commons-collections.version>
        <commons-configuration.version>1.10</commons-configuration.version>
        <commons-io.version>2.5</commons-io.version>
        <commons-lang.version>3.5</commons-lang.version>
        <guava.version>21.0</guava.version>
        <osgi.version>6.0.0</osgi.version>

        <emf.version>2.12.0</emf.version>
        <ecore.version>2.12.0</ecore.version>
        <xcore.version>1.1.100</xcore.version>

        <javax-annotations.version>3.0.1</javax-annotations.version>
        <cglib-nodep.version>3.2.4</cglib-nodep.version>
        
        <hbase.version>1.3.1</hbase.version>
        <hadoop.version>2.7.3</hadoop.version>
    </properties>

  <dependencies>
  <!--Maven dependencies-->
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-plugin-api</artifactId>
      <version>2.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.maven.plugin-tools</groupId>
      <artifactId>maven-plugin-annotations</artifactId>
      <version>3.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.codehaus.plexus</groupId>
      <artifactId>plexus-utils</artifactId>
      <version>3.0.8</version>
    </dependency>
    <!--JUnit dependencies-->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <!--EMF dependencies-->
    <dependency>
        <groupId>org.eclipse.emf</groupId>
        <artifactId>org.eclipse.emf.common</artifactId>
        <version>${emf.version}</version>
    </dependency>
    <dependency>
        <groupId>org.eclipse.emf</groupId>
        <artifactId>org.eclipse.emf.ecore</artifactId>
        <version>${ecore.version}</version>
    </dependency>
    <dependency>
        <groupId>org.eclipse.emf</groupId>
        <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
        <version>${ecore.version}</version>
    </dependency>
    <dependency>
       <groupId>org.eclipse.emf</groupId>
       <artifactId>org.eclipse.emf.ecore.xcore.lib</artifactId>
       <version>${xcore.version}</version>
    </dependency> 
    <!--Apache dependencies-->
    <dependency>
       <groupId>org.apache.hbase</groupId>
   	   <artifactId>hbase-client</artifactId>
       <version>${hbase.version}</version>
    </dependency>
    <dependency>
       <groupId>org.apache.hbase</groupId>
   	   <artifactId>hbase-common</artifactId>
       <version>${hbase.version}</version>
    </dependency>
    <dependency>
        <groupId>org.apache.hadoop</groupId>
        <artifactId>hadoop-common</artifactId>
        <version>${hadoop.version}</version>
    </dependency> 
    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>  
    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-collections4</artifactId>
       <version>4.1</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.commons</groupId>
 	    <artifactId>commons-lang3</artifactId>
    	<version>3.5</version>
	</dependency>
    <dependency>
   		<groupId>org.apache.commons</groupId>
    	<artifactId>commons-math3</artifactId>
    	<version>3.6</version>
	</dependency>
	<dependency>
        <groupId>org.apache.spark</groupId>
        <artifactId>spark-core_2.11</artifactId>
        <version>2.4.4</version>
    </dependency>
    <dependency>
	   <groupId>org.apache.spark</groupId>
	   <artifactId>spark-graphx_2.11</artifactId>
	   <version>2.4.4</version>
	</dependency>
	<!-- Hazalcast dependency -->
<dependency>
    <groupId>com.hazelcast</groupId>
    <artifactId>hazelcast-spark</artifactId>
    <version>0.1</version>
</dependency>
<dependency>
    <groupId>com.hazelcast</groupId>
    <artifactId>hazelcast</artifactId>
    <version>3.7.2</version>
</dependency>
<dependency>
    <groupId>com.hazelcast</groupId>
    <artifactId>hazelcast-client</artifactId>
    <version>3.7.2</version>
</dependency>
    <!-- cglib dependencies -->
    <dependency>
       <groupId>cglib</groupId>
       <artifactId>cglib-nodep</artifactId>
       <version>${cglib-nodep.version}</version>
    </dependency>
    <!-- commons dependencies -->
	<dependency>
	    <groupId>commons-lang</groupId>
	    <artifactId>commons-lang</artifactId>
	    <version>2.6</version>
	</dependency>
	<dependency>
	    <groupId>commons-io</groupId>
	    <artifactId>commons-io</artifactId>
	    <version>2.4</version>
	</dependency>
<!-- NeoEMF dependency -->
	<dependency>
	  <groupId>fr.inria.atlanmod.neoemf</groupId>
	  <artifactId>neoemf-data-hbase</artifactId>
	  <version>1.0.1</version>
	</dependency>
	
<!-- Jline dependency -->
<dependency>
    <groupId>jline</groupId>
    <artifactId>jline</artifactId>
    <version>2.14.5</version>
</dependency>

	
  </dependencies>
  <build>
  <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <manifestEntries>
                    <Main-Class>fr.inria.atlanmod.instantiator.Launcher</Main-Class>
                  </manifestEntries>
                </transformer>
              </transformers>
              <artifactSet>
                <excludes>
                  <exclude>log4j:log4j:jar:</exclude>
                </excludes>
              </artifactSet>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>

